# debriev

./: .env.example  .gitignore  AGENTS.md  CODEX.md  Makefile  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.codex/: config.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260331_0001_initial.py  20260403_0002_segment_anchor_metadata.py  20260403_0003_evidence_bundles.py  20260403_0004_support_link_integrity.py  20260403_0005_verification_support_snapshot.py  20260403_0006_verification_support_snapshot_version.py  20260403_0007_assertion_extraction_snapshot.py  (+5 more)
app/: __init__.py  config.py  db.py  main.py
apps/api/: .env.example  README.md  dev.db  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260224_000001_initial_schema.py
apps/api/app/: __init__.py  courtlistener.py  main.py  settings.py  worker.py
apps/api/app/db/: __init__.py  models.py  session.py
apps/api/app/retrieval/: __init__.py  chunking.py  embeddings.py  service.py  store.py  test_bogus_extractor.py  test_bogus_extractor_real_chunk.py
apps/api/data/: retrieval.db
apps/api/debriev_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/scripts/: run_bogus_extractor_self_test.py
apps/api/tests/: __init__.py  test_chat_citation_intent.py  test_citation_golden_fixtures.py  test_courtlistener.py  test_settings.py  test_worker.py
apps/api/tests/fixtures/: fixture_fake.txt  fixture_noise.txt  fixture_roe.txt
docs/: citation_verification_mvp.md
infra/: compose.yml
scripts/: index_doc.py
(+207 files in other folders)
